# Intro-to-Robot-Operating-System-ROS-

devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/motor_commander/: comand_msg_1.h  comand_msg_2.h  jointState.h
devel/include/motor_controller/: comand_msg_1.h  comand_msg_2.h  jointState.h
devel/include/nxt_msgs/: Accelerometer.h  Color.h  Compass.h  Contact.h  Gyro.h  JointCommand.h  Light.h  MagneticField.h  Range.h  Sound.h
devel/include/riverwatch_locomotion/: PidControllerState.h
devel/include/t2_package/: Set_Robot_ModelRequest.h  Set_Robot_ModelResponse.h  robot_id.h
devel/include/tr5_kinematics/: DoForwardKinematic.h  DoForwardKinematicRequest.h  DoForwardKinematicResponse.h  DoInverseKinematic.h  DoInverseKinematicRequest.h  DoInverseKinematicResponse.h
devel/include/tr5_robot_controller/: KinematicMode.h  KinematicModeRequest.h  KinematicModeResponse.h
devel/lib/current_position/: current_position_node
devel/lib/learning_tf/: turtle_tf_broadcaster  turtle_tf_listener
devel/lib/line_detector/: line_detector_node
devel/lib/magnetic_detector/: magnetic_detector_node
devel/lib/motor_commander/: motor_commander_node
devel/lib/motor_controller/: motor_controller_node
devel/lib/obstacle_detector/: obstacle_detector_node
devel/lib/pkgconfig/: control_msgs.pc  current_position.pc  learning_tf.pc  line_detector.pc  magnetic_detector.pc  motor_commander.pc  motor_controller.pc  nmea_navsat_driver.pc  nxt_description.pc  nxt_lib.pc  nxt_msgs.pc  nxt_ros.pc  obstacle_detector.pc  riverwatch_locomotion.pc  riverwatch_motorcontrol.pc  robot1.pc  robot_pose_ekf.pc  sonar_server.pc  t.pc  t1_package.pc  t2_package.pc  tr5_control.pc  tr5_description.pc  tr5_drivers.pc  tr5_kinematics.pc  tr5_robot_controller.pc
devel/lib/robot1/: uav_tf_broadcaster  uav_tf_listener
devel/lib/robot_pose_ekf/: robot_pose_ekf  test_robot_pose_ekf  test_robot_pose_ekf_zero_covariance
devel/lib/t1_package/: simple_node
devel/lib/t2_package/: t2_client_node  t2_publisher_node  t2_subscriber_node
devel/lib/tr5_control/: tr5_comm_node  tr5_control
devel/lib/tr5_kinematics/: tr5_kinematics_node
devel/lib/tr5_robot_controller/: tr5_robot_controller_node
devel/share/control_msgs/cmake/: control_msgs-msg-paths.cmake  control_msgsConfig.cmake
devel/share/current_position/cmake/: current_position-msg-extras.cmake  current_position-msg-paths.cmake  current_positionConfig.cmake
devel/share/learning_tf/cmake/: learning_tfConfig.cmake
devel/share/line_detector/cmake/: line_detector-msg-extras.cmake  line_detector-msg-paths.cmake  line_detectorConfig.cmake
devel/share/magnetic_detector/cmake/: magnetic_detector-msg-extras.cmake  magnetic_detector-msg-paths.cmake  magnetic_detectorConfig.cmake
devel/share/motor_commander/cmake/: motor_commander-msg-extras.cmake  motor_commander-msg-paths.cmake  motor_commanderConfig.cmake
devel/share/motor_controller/cmake/: motor_controller-msg-extras.cmake  motor_controller-msg-paths.cmake  motor_controllerConfig.cmake
devel/share/nmea_navsat_driver/cmake/: nmea_navsat_driverConfig.cmake
devel/share/nxt_description/cmake/: nxt_descriptionConfig.cmake
devel/share/nxt_lib/cmake/: nxt_libConfig.cmake
devel/share/nxt_msgs/cmake/: nxt_msgs-msg-extras.cmake  nxt_msgs-msg-paths.cmake  nxt_msgsConfig.cmake
devel/share/nxt_ros/cmake/: nxt_rosConfig.cmake
devel/share/obstacle_detector/cmake/: obstacle_detector-msg-extras.cmake  obstacle_detector-msg-paths.cmake  obstacle_detectorConfig.cmake
devel/share/riverwatch_locomotion/cmake/: riverwatch_locomotion-msg-extras.cmake  riverwatch_locomotion-msg-paths.cmake  riverwatch_locomotionConfig.cmake
devel/share/riverwatch_motorcontrol/cmake/: riverwatch_motorcontrolConfig.cmake
devel/share/robot1/cmake/: robot1Config.cmake
devel/share/robot_pose_ekf/cmake/: robot_pose_ekf-msg-extras.cmake  robot_pose_ekfConfig.cmake
devel/share/sonar_server/cmake/: sonar_serverConfig.cmake
devel/share/t/cmake/: tConfig.cmake
devel/share/t1_package/cmake/: t1_packageConfig.cmake
devel/share/t2_package/cmake/: t2_package-msg-extras.cmake  t2_package-msg-paths.cmake  (+1 more)
src/learning_tf/: CMakeLists.txt  CMakeLists.txt~  package.xml  start_demo.launch
src/learning_tf/src/: turtle_tf_listener.cpp
src/nxt_final/nxt_description/: CMakeLists.txt  package.xml
src/nxt_final/nxt_description/launch/: upload_nxt.launch
src/nxt_final/nxt_description/meshes/: Motor.dae  MotorServo.dae  NXTBrick.dae  Wheel.dae
src/nxt_final/nxt_description/meshes/sensors/: LightSensor.dae  MagneticSensor.dae  UltraSonicSensor.dae
src/nxt_final/nxt_description/urdf/: nxt.urdf.xacro  nxt_robot.urdf.xacro
src/nxt_final/nxt_lib/: CMakeLists.txt  package.xml  setup.py
src/nxt_final/nxt_lib/src/nxt/: brick.py  locator.py  motcont.py  motor.py  usbsock.py
src/nxt_final/nxt_lib/src/nxt/sensor/: __init__.py  common.py  digital.py  generic.py  hitechnic.py
src/nxt_final/nxt_msgs/: CMakeLists.txt  package.xml
src/nxt_final/nxt_msgs/msg/: Compass.msg
src/nxt_final/nxt_ros/: CMakeLists.txt  lego_robot.yaml  package.xml
src/nxt_final/nxt_ros/launch/: nxt_bringup.launch~  nxt_diags.yaml  nxt_pid.launch
src/nxt_final/nxt_ros/scripts/: base_odometry.py  nxt_ros.py
src/nxt_final/robot_pose_ekf/: robot_pose_ekf.launch
src/rob_t2/tr5_control/: package.xml
src/rob_t2/tr5_drivers/: CMakeLists.txt
src/rob_t2/tr5_kinematics/: CMakeLists.txt  package.xml
src/rob_t2/tr5_kinematics/include/tr5_kinematics/: Kinematics.hpp  Kinematics.hpp~
src/rob_t2/tr5_kinematics/src/: Kinematics.cpp  tr5_kinematics_node.cpp
src/rob_t2/tr5_robot_controller/: CMakeLists.txt~  package.xml
src/robot1/: CMakeLists.txt~  package.xml  start_robot.launch  start_robot.launch~
src/robot1/src/: uav_tf_broadcaster.cpp  uav_tf_listener.cpp
src/t1_package/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/t1_package/src/: node.cpp  node.cpp~
src/t2_package/: CMakeLists.txt~  package.xml~
src/t2_package/msg/: robot_id.msg~
src/t2_package/src/: client.cpp  publisher.cpp  subscriber.cpp
(+122 files in other folders)
