cmake_minimum_required(VERSION 2.8.3)
project(nxt_description)

find_package( catkin )

catkin_package()

#catkin_download_test_data(http://foote-ros-pkg.googlecode.com/files/nxt_description.parts.tar.gz meshes/nxt_description.tar.gz)
#rosbuild_untar_file(meshes/nxt_description.tar.gz meshes/parts ALL)
