<?xml version="1.0"?>
<package>
  <name>nxt_description</name>
  <version>1.0.0</version>
  <description>
    nxt_description contains the nxt collada models for nxt_ros. The collada models are created from
    ldraw.org part models and are named by part number.
  </description>

  <maintainer email="rmm@uninova.pt">Ricardo Mendonça</maintainer>

  <author>Wim Meeussen</author>
  <url>http://ros.org/wiki/nxt_controllers</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
