<?xml version="1.0"?>
<package>
  <name>nxt_msgs</name>
  <version>1.0.0</version>
  <description>
      The nxt_msgs package contains a set of messages to publish data coming from various NXT sensor.
  </description>

  <maintainer email="rmm@uninova.pt">Ricardo Mendonça</maintainer>

  <author>Wim Meeussen</author>
  <url>http://ros.org/wiki/nxt_msgs</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
